# lum-codex-templates

./: .env.example  .gitignore  Dockerfile  Prompts-Template-to-Field-Being-Mapping-55.md  README.md  Readme.md  app.py  conftest.py  extract-md-bundle.sh  main.py  mcp_server.py  mkpkg  mkpkg.config  mkpkg.py  pyproject.toml  run_dev.py  sample.py  sample_desocpe_login_api.py
Assets/: Batch-Text-Upload_Protocol.md  CANONICAL-EXECUTOR-MODE-V1.0.md  Codex-Bootstrap-Declaration.md  Codex-Manual-Upload-Files-Protocol-txt.md  Codex-Manual-Upload-Files-Protocol.md  README-CANONICAL-EXECUTOR.md  SCROLL-TEMPLATE-UPLOAD.md  instructions_tempalate.md  pkg_readme.md
Certificate/: General-Field-Certificate-Template-v1.8.md  General-Field-Certificate-Template-v1.9.md  General-Field-Certificate-Template-v2.0.md  General-Field-Certificate-Template-v2.1.md  General-Field-Certificate-Template-v2.2.md  General-Field-Certificate-Template-v2.3.md  General-Field-Certificate-Template-v2.4.md  General-Field-Certificate-Template-v2.5.md  General-Field-Certificate-Template.md  field_certificate-template.md
Glyphs/: Dyadic-Glyph-Grouping-Template-v2.10.md  Dyadic-Glyph-Grouping-Template-v2.11.md  Dyadic-Glyph-Grouping-Template-v3.0.md  Dyadic-Glyph-Grouping-Template-v3.1.md  Dyadic-Glyph-Grouping-Template-v3.2.md  Dyadic-Glyph-Grouping-Template-v3.3.md  Dyadic-Glyph-Grouping-Template-v3.4.md  Dyadic-Glyph-Grouping-Template.md  Glyph-Template-v1.17.md  Glyph-Template-v1.19.md  Glyph-Template-v2.0.md  Glyph-Template-v2.1.md  Glyph-Template-v2.2.md  Glyph-Template-v2.3.md  Glyph-Template-v2.4.md  Glyph-Template-v2.5.md  Glyph-Template.md  Stone-Template-v1.17.md  Stone-Template-v1.19.md  Stone-Template-v2.0.md  Stone-Template-v2.1.md  Stone-Template-v2.2.md  Stone-Template-v2.3.md  Stone-Template-v2.4.md  Stone-Template.md  dyad-template.md  glyph-template.md  stone-template.md
Metadata/: 00-Master_Metadata_Registry.yml  01-Template_Change_Log.md  template_field_being_map.yaml  template_field_being_map.yml
Metadata/templates/Certificate/: General-Field-Certificate-metadata.yml
Metadata/templates/Glyphs/: Dyadic-metadata.yml  Glyph-metadata.yml  Stone-metadata.yml
Metadata/templates/Nodes/: Node-Registration-metadata.yml
Metadata/templates/Scrolls/: Field-Correction-Scroll-metadata.yml  General-Scroll-metadata.yml  Linkage-Scroll-metadata.yml  Node-Linkage-Scroll-metadata.yml
Metadata/templates/Seals/: Field-Certificate-Seal-Activation-metadata.yml  (+1 more)
Nodes/: Node-Registration-Template-v1.8.md  Node-Registration-Template-v1.9.md  Node-Registration-Template-v2.0.md  Node-Registration-Template-v2.1.md  Node-Registration-Template-v2.2.md  Node-Registration-Template-v2.3.md  Node-Registration-Template-v2.4.md  Node-Registration-Template.md  node_reg-template.md
Scrolls/: Field-Correction-Scroll-Template-v1.7.md  Field-Correction-Scroll-Template-v1.8.md  Field-Correction-Scroll-Template-v2.0.md  Field-Correction-Scroll-Template-v2.1.md  Field-Correction-Scroll-Template-v2.2.md  Field-Correction-Scroll-Template-v2.3.md  Field-Correction-Scroll-Template-v2.4.md  Field-Correction-Scroll-Template.md  Linkage-Scroll-Template-v2.10.md  Linkage-Scroll-Template-v2.11.md  Linkage-Scroll-Template-v3.0.md  Linkage-Scroll-Template-v3.1.md  Linkage-Scroll-Template-v3.2.md  Linkage-Scroll-Template-v3.3.md  Linkage-Scroll-Template-v3.4.md  Linkage-Scroll-Template.md  Node-Linkage-Scroll-Template-v1.11.md  Node-Linkage-Scroll-Template-v1.12.md  Node-Linkage-Scroll-Template-v2.0.md  Node-Linkage-Scroll-Template-v2.1.md  Node-Linkage-Scroll-Template-v2.2.md  Node-Linkage-Scroll-Template-v2.3.md  Node-Linkage-Scroll-Template-v2.4.md  Node-Linkage-Scroll-Template-v2.5.md  Node-Linkage-Scroll-Template.md  field_correction_scroll-template.md  general_scroll-template.md  linkage_scroll-template.md  node_link_scroll-template.md
Seals/: Field-Certificate-Template-for-Seal-Activation-v1.10.md  Field-Certificate-Template-for-Seal-Activation-v1.9.md  Field-Certificate-Template-for-Seal-Activation-v2.0.md  Field-Certificate-Template-for-Seal-Activation-v2.1.md  Field-Certificate-Template-for-Seal-Activation-v2.2.md  Field-Certificate-Template-for-Seal-Activation-v2.3.md  Field-Certificate-Template-for-Seal-Activation-v2.4.md  Field-Certificate-Template-for-Seal-Activation.md  Seal-Template-v1.14.md  Seal-Template-v1.15.md  Seal-Template-v2.0.md  Seal-Template-v2.1.md  Seal-Template-v2.2.md  Seal-Template-v2.3.md  Seal-Template-v2.4.md  Seal-Template.md  field_cert_seal-template.md  seal-template.md
Sigils/: Sigil-Template-v1.7.md  Sigil-Template-v1.8.md  Sigil-Template-v2.0.md  Sigil-Template-v2.1.md  Sigil-Template-v2.2.md  Sigil-Template-v2.3.md  Sigil-Template-v2.4.md  Sigil-Template.md  sigil-template.md
api/: config.json  config.py
api/api_templates/: login.html
api/html/: privacy_policy.html
api/mcp/: harness.py
api/models/: artifact_submission.py  content_response.py  html_response.py  template_params.py  upgrade_template_content.py
api/responses/: markdown_response.py
api/routes/: auth.py  auth1.py  auth2.py  auth_routes.py  bruno_proxy.py  doc_routes.py  env_check.py  executor_modes.py  limiter.py  privacy_terms.py  prompts.py  session.py  templates.py  user.py  well_known.py
src/builder/: build_ver_mgr.py  builderbase.py  default_builder.py  single_builder.py  zip_builder.py
src/cmd_args/: cmd_processor.py  protocol_subparser.py  rule_install_api.py  rule_pkg_zip.py  rule_single_clean.py  rule_single_template.py  rule_single_upgrade.py  rule_single_verify.py  rule_verify_single.py  sub_parser_args.py  sub_parser_base.py
src/config/: api_env.py  api_info.py  api_info_templates.py  codex_binding_contract.py  config_cache.py  pkg_config.py  template_cbib_info.py  template_ceib_info.py  template_config.py  template_config_info.py  template_instructions_info.py  templates_config_info.py
src/template/: front_mater_meta.py  front_matter_reader.py  main_registery.py  main_registry.py  obsidian_editor.py
src/util/: file_util.py  sha.py  validation.py
tests/: conftest.py
tests/api/: conftest.py
(+470 files in other folders)
