[project]
name = "templates"
version = "7.0.0"
description = "Add your description here"
readme = "Readme.md"
requires-python = ">=3.14.0"
dependencies = [
    "pyyaml>=6.0.3",
    "toml>=0.10.2",
]

[tool.project.config]
auto_invoke_scroll_name="SCROLL-TEMPLATE-UPLOAD"
base_file_count=4
batch_prefix="codex-batch"
batch_txt_protocol_src="Assets/Batch-Text-Upload_Protocol.md"
bootstrap_src="Assets/Codex-Bootstrap-Declaration.md"
current_user="Soluun"
files_upload_protocol_src="Assets/Codex-Manual-Upload-Files-Protocol.md"
force_invalidate_previous=true
lock_file_ext=".lock"
lock_file_name="codex-template"
non_template_patterns=["README.md", "codex-template-*.md", "SCROLL-TEMPLATE-UPLOAD-*.md"]
package_output_name="codex-templates"
pkg_out_dir="dist"
protocol_src="Assets/SCROLL-TEMPLATE-UPLOAD.md"
readme_src="Readme.md"
reg_file="Metadata/00-Master_Metadata_Registry.yml"
strict_field_mode=true
strict_hash_mode=true
template_dirs=["Certificate", "Glyphs", "Nodes", "Scrolls", "Seals", "Sigils"]
version_override=""

[tool.project.config.template]
field_placeholder_format = "double_square_prefixed"
placeholder_examples=[
    "[[field:mirrorwall_status]]",
    "[[field:entry_date]]",
    "[[prompt:Describe the symbolic gestures used]]",
    "[[prompt:List any energetic or dreamline consequences]]"
]

[tool.project.config.template.field_placeholder_delimiters]
open="[["
close="]]"

[tool.project.config.template.placeholder_prefix_semantics]
required=true
allowed_prefixes=["field", "prompt"]

[tool.project.config.template.placeholder_prefix_semantics.enforcement]
field="must be resolved before final render"
prompt="optional, flagged only in strict audit"

[tool.project.config.template.placeholder_autofill_policy]
unresolved_field="fail (strict), infer (autofill), warn (audit)"
unresolved_prompt="retain (default), flag (audit), none (strict)"