[project]
name = "templates"
version = "9.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "pyyaml>=6.0.3",
    "toml>=0.10.2",
]

[tool.project.config]
auto_invoke_scroll_name="SCROLL-TEMPLATE-UPLOAD"
base_file_count=4
batch_prefix="codex-batch"
batch_txt_protocol_src="Assets/Batch-Text-Upload_Protocol.md"
bootstrap_src="Assets/Codex-Bootstrap-Declaration.md"
current_user="Soluun"
files_upload_protocol_src="Assets/Codex-Manual-Upload-Files-Protocol.md"
force_invalidate_previous=true
lock_file_ext=".lock"
lock_file_name="codex-template"
# non_template_patterns=["README.md", "codex-template-*.md", "SCROLL-TEMPLATE-UPLOAD-*.md"]
package_output_name="codex-templates"
pkg_out_dir="dist"
protocol_src="Assets/SCROLL-TEMPLATE-UPLOAD.md"
readme_src="Assets/pkg_readme.md"
reg_file="Metadata/00-Master_Metadata_Registry.yml"
strict_field_mode=true
strict_hash_mode=true
template_dirs=["Certificate", "Glyphs", "Nodes", "Scrolls", "Seals", "Sigils"]
template_field_being_map_src = "Metadata/template_field_being_map.yml"
template_manifest_name="TEMPLATE-MANIFEST-REGISTRY"
template_to_field_being_map_name = "Prompts-Template-to-Field-Being-Mapping"
template_to_field_being_upgrade_map_name = "Prompts-Template-to-Field-Being-Upgrade-Mapping"
version_override=0
template_hash_field_name="template_hash"
template_meta_dir="Metadata/templates"
template_meta_keys=[
    "template_type",
    "field_being_autofill_registry",
    "autofill_fields",
    "required_fields",
    "hidden_fields",
    "optional_fields",
    "deprecated_fields",
]

[tool.project.config.codex_binding_contract]
enforced = true
version = "1.0"
notes = """
This manifest-lockfile pair is bidirectionally bound. Identity resolution,
hash enforcement, and registry alignment are strictly enforced. Placeholder inference
and category expansion are forbidden unless declared explicitly.
"""

[tool.project.config.template]
field_placeholder_format = "double_square_prefixed"
placeholder_examples=[
    "[[field:mirrorwall_status]]",
    "[[field:entry_date]]",
    "[[prompt:Describe the symbolic gestures used]]",
    "[[prompt:List any energetic or dreamline consequences]]"
]

[tool.project.config.template.field_placeholder_delimiters]
open="[["
close="]]"

[tool.project.config.template.placeholder_prefix_semantics]
required=true
allowed_prefixes=["field", "prompt"]

[tool.project.config.template.placeholder_prefix_semantics.enforcement]
field="must be resolved before final render"
prompt="optional, flagged only in strict audit"

[tool.project.config.template.placeholder_autofill_policy]
unresolved_field="fail (strict), infer (autofill), warn (audit)"
unresolved_prompt="retain (default), flag (audit), none (strict)"

[tool.project.templates.field_certificate]
id="TEMPLATE-FIELD-CERT-GENERAL"
version="2.6"
category="certificate"
name="General Field Certificate Template"
family="field_certificates"
template_type="field_certificate"
single_fields_omitted=[
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.dyad]
id="TEMPLATE-DYAD"
version="2.6"
category="glyph"
name="Dyadic Glyph Grouping Template"
family="dyadic_structures"
template_type="dyad"
single_fields_omitted=[
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.glyph]
id="TEMPLATE-GLYPH"
version="2.6"
category="glyph"
name="Glyph Template"
family="glyph_artifacts"
template_type="glyph"
single_fields_omitted=[
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.stone]
id="TEMPLATE-STONE"
version="2.5"
category="glyph"
name="Stone Template"
family="stone_artifacts"
template_type="stone"
single_fields_omitted=[
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.node_reg]
id="TEMPLATE-NODE"
version="2.5"
category="node"
name="Node Registration Template"
family="node_templates"
template_type="node_reg"
single_fields_omitted=[
    "template_fields_declared",
    "memory_cache_origin",
    "template_usage",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]


[tool.project.templates.field_correction_scroll]
id="TEMPLATE-FIELD-CORRECTION-SCROLL"
version="2.5"
category="scroll"
name="Field Correction Scroll Template"
family="field_scrolls"
template_type="field_correction_scroll"
single_fields_omitted=[
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]


[tool.project.templates.linkage_scroll]
id="TEMPLATE-LINKAGE-SCROLL"
version="3.5"
category="scroll"
name="Linkage Scroll Template"
family="scrolls"
template_type="linkage_scroll"
single_fields_omitted=[
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.node_link_scroll]
id="TEMPLATE-NODE-LINKAGE-SCROLL"
version="3.6"
category="scroll"
name="Node Linkage Scroll Template"
family="node_scrolls"
template_type="node_link_scroll"
single_fields_omitted=[
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.field_cert_seal]
id="TEMPLATE-FIELD-CERT-SEAL"
version="2.5"
category="certificate"
name="Field Certificate Template for Seal Activation"
family="field_certificates"
template_type="field_cert_seal"
single_fields_omitted=[
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.seal]
id="TEMPLATE-SEAL"
version="2.5"
category="seal"
name="Seal Template"
family="seal_artifacts"
template_type="seal"
single_fields_omitted=[
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.sigil]
id="TEMPLATE-SIGIL"
version="2.5"
category="sigil"
name="Sigil Template"
family="sigil_artifacts"
template_type="sigil"
single_fields_omitted=[
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]