[project]
name = "Codex-Templates"
version = "10.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "bcrypt<4.0.0",
    "descope>=1.9.1",
    "fastapi>=0.128.0",
    "fastapi-cache2>=0.2.2",
    "fastmcp<3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "slowapi>=0.1.9",
    "toml>=0.10.2",
]

[tool.project.config]
auto_invoke_scroll_name="SCROLL-TEMPLATE-UPLOAD"
base_file_count=4
batch_prefix="codex-batch"
batch_txt_protocol_src="Assets/Batch-Text-Upload_Protocol.md"
bootstrap_src="Assets/Codex-Bootstrap-Declaration.md"
current_user="Soluun"
files_upload_protocol_src="Assets/Codex-Manual-Upload-Files-Protocol.md"
force_invalidate_previous=true
lock_file_ext=".lock"
lock_file_name="codex-template"
# non_template_patterns=["README.md", "codex-template-*.md", "SCROLL-TEMPLATE-UPLOAD-*.md"]
package_output_name="codex-templates"
pkg_out_dir="dist"
protocol_src="Assets/SCROLL-TEMPLATE-UPLOAD.md"
readme_src="Assets/pkg_readme.md"
reg_file="Metadata/00-Master_Metadata_Registry.yml"
strict_field_mode=true
strict_hash_mode=true
cleaned_dir="cleaned"
reports_dir="reports"
upgrade_dir="upgraded"
template_dirs=["Certificate", "Glyphs", "Nodes", "Scrolls", "Seals", "Sigils"]
template_field_being_map_src = "Metadata/template_field_being_map.yml"
template_manifest_name="TEMPLATE-MANIFEST-REGISTRY"
template_to_field_being_map_name = "Prompts-Template-to-Field-Being-Mapping"
template_to_field_being_upgrade_map_name = "Prompts-Template-to-Field-Being-Upgrade-Mapping"
version_override=0
template_hash_field_name="template_hash"
template_meta_dir="Metadata/templates"
template_meta_keys=[
    "template_type",
    "field_being_autofill_registry",
    "autofill_fields",
    "required_fields",
    "hidden_fields",
    "optional_fields",
    "deprecated_fields",
]

[tool.project.config.codex_binding_contract]
enforced = true
version = "1.0"
notes = """
This manifest-lockfile pair is bidirectionally bound. Identity resolution,
hash enforcement, and registry alignment are strictly enforced. Placeholder inference
and category expansion are forbidden unless declared explicitly.
"""

[tool.project.config.template]
field_placeholder_format = "double_square_prefixed"
placeholder_examples=[
    "[[field:mirrorwall_status]]",
    "[[field:entry_date]]",
    "[[prompt:Describe the symbolic gestures used]]",
    "[[prompt:List any energetic or dreamline consequences]]"
]
cleanup_fields_single=[
    "field_placeholder_delimiters",
    "field_placeholder_format",
    "placeholder_autofill_policy",
    "placeholder_prefix_semantics",
    "registry_file",
    "template_file",
    "template_filename",
    "template_purpose",
]
cleanup_fields_zip=[
    "field_placeholder_delimiters",
    "field_placeholder_format",
    "placeholder_autofill_policy",
    "placeholder_prefix_semantics",
    "registry_file",
    "template_file",
    "template_filename",
]
# Fields to apply to single and zip builds of tool.project.config.template...
apply_config_template_fields_signal=[
    "field_placeholder_delimiters",
    "placeholder_prefix_semantics",
]
apply_config_template_fields_zip=[
    "field_placeholder_delimiters",
    "placeholder_prefix_semantics",
]

# Fields to clean from API-installed templates if they exist
api_installer_template_cleanup_fields=[
    "canonical_prompt",
    "upnote_categories",
]


[tool.project.config.template.field_placeholder_delimiters]
open="[["
close="]]"

[tool.project.config.template.cbib]
id="cbib_id"
title="Canonical Behavior Invocation Block"

[tool.project.config.template.cbib.single]
version="101.0"

[tool.project.config.template.cbib.zip]
version="1.1"

[tool.project.config.template.cbib.api]
version="1.0"

[tool.project.config.template.ceib]
executor_mode="CANONICAL-EXECUTOR-MODE"
title="Canonical Executor Invocation Block"

[tool.project.config.template.ceib.single]
version="100.0"

[tool.project.config.template.ceib.zip]
version="1.0"

[tool.project.config.template.ceib.api]
version="1.0"

[tool.project.config.template.placeholder_prefix_semantics]
required=true
allowed_prefixes=["field", "prompt"]

[tool.project.config.template.placeholder_prefix_semantics.enforcement]
field="must be resolved before final render"
prompt="optional, flagged only in strict audit"

# [tool.project.config.template.placeholder_autofill_policy]
# unresolved_field="fail (strict), infer (autofill), warn (audit)"
# unresolved_prompt="retain (default), flag (audit), none (strict)"

[tool.project.config.template.placeholder_autofill_policy.unresolved_field]
strict="fail"
autofill="infer"
audit="warn"

[tool.project.config.template.placeholder_autofill_policy.unresolved_prompt]
default="retain"
audit="flag"
strict="none"

[tool.project.templates.field_certificate]
id="TEMPLATE-FIELD-CERT-GENERAL"
version="2.10"
category="certificate"
name="General Field Certificate Template"
family="field_certificates"
template_type="field_certificate"
image_expected=false
single_fields_omitted=[
    "template_id",
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.dyad]
id="TEMPLATE-DYAD"
version="2.10"
category="glyph"
name="Dyadic Glyph Grouping Template"
family="dyadic_structures"
template_type="dyad"
image_expected=false
single_fields_omitted=[
    "template_id",
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.glyph]
id="TEMPLATE-GLYPH"
version="2.11"
category="glyph"
name="Glyph Template"
family="glyph_artifacts"
template_type="glyph"
image_expected=true
single_fields_omitted=[
    "template_id",
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.stone]
id="TEMPLATE-STONE"
version="2.10"
category="glyph"
name="Stone Template"
family="stone_artifacts"
template_type="stone"
image_expected=true
single_fields_omitted=[
    "template_id",
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.node_reg]
id="TEMPLATE-NODE"
version="2.9"
category="node"
name="Node Registration Template"
family="node_templates"
template_type="node_reg"
image_expected=false
single_fields_omitted=[
    "template_id",
    "template_fields_declared",
    "memory_cache_origin",
    "template_usage",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]


[tool.project.templates.field_correction_scroll]
id="TEMPLATE-FIELD-CORRECTION-SCROLL"
version="2.9"
category="scroll"
name="Field Correction Scroll Template"
family="field_scrolls"
template_type="field_correction_scroll"
image_expected=false
single_fields_omitted=[
    "template_id",
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]


[tool.project.templates.linkage_scroll]
id="TEMPLATE-LINKAGE-SCROLL"
version="3.9"
category="scroll"
name="Linkage Scroll Template"
family="scrolls"
template_type="linkage_scroll"
image_expected=false
single_fields_omitted=[
    "template_id",
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.node_link_scroll]
id="TEMPLATE-NODE-LINKAGE-SCROLL"
version="3.10"
category="scroll"
name="Node Linkage Scroll Template"
family="node_scrolls"
template_type="node_link_scroll"
image_expected=false
single_fields_omitted=[
    "template_id",
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.field_cert_seal]
id="TEMPLATE-FIELD-CERT-SEAL"
version="2.9"
category="certificate"
name="Field Certificate Template for Seal Activation"
family="field_certificates"
template_type="field_cert_seal"
image_expected=false
single_fields_omitted=[
    "template_id",
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.seal]
id="TEMPLATE-SEAL"
version="2.9"
category="seal"
name="Seal Template"
family="seal_artifacts"
template_type="seal"
image_expected=true
single_fields_omitted=[
    "template_id",
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[tool.project.templates.sigil]
id="TEMPLATE-SIGIL"
version="2.10"
category="sigil"
name="Sigil Template"
family="sigil_artifacts"
template_type="sigil"
image_expected=true
single_fields_omitted=[
    "template_id",
    "template_fields_declared",
    "memory_cache_origin",
    "threshold_flags",
    "threshold_flags_registry_scope",
    "enforce_lockfile_fields",
    "lockfile_priority",
    "require_registry_match",
    "declared_registry_id",
    "declared_registry_version",
    "mapped_registry",
    "mapped_registry_minimum_version",
]

[dependency-groups]
dev = [
    "uvicorn>=0.40.0",
]

[tool.project.config.api]
base_dir="api"
# base_url="https://api.example.com/v1"
timeout_seconds=30
ttl_session_cache_seconds=14400
retries=3
title="Codex Templates API"
description="API for retrieving and applying Codex templates."
version="0.4.0"

[tool.project.config.api.headers]
Content-Type="application/json"
"User-Agent" = "templates-client/9.5.0"

[tool.project.config.api.templates]
dir_name="codex-templates"

[tool.project.config.api.auth]
api_key_env_var="API_KEY"

[tool.project.config.api.env]
env_file_dev=".env.dev"
env_file_prod=".env"
env_file_test=".env.test"
